# weaviate-lab

./: .env  README.md  docker-compose.yml  main.py  movie_fetcher.py  movie_keyword_search.py  movie_load_data.py  movie_searcher.py  near_text_search_using_cohere.py  pyproject.toml  rag_single_prompt.py  testing_connection.py
academy/: movie_fetcher.py  movie_filters.py  movie_hybrid_search.py  movie_searcher.py  rag_grouped_task.py
settings/: settings.py
utils/: weaviate.py
