[project]
name = "weaviate-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.13.12",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "weaviate>=0.1.2",
    "weaviate-client>=4.11.0",
]
